--- a/src/api/server/response/player/settings.json
+++ b/src/api/server/response/player/settings.json
@@ -2,7 +2,7 @@
     "language": "en",
     "autoRebet": true,
     "enableGameSound": true,
-    "enableStreamingVideo": true,
+    "enableStreamingVideo": false,
     "enableStreamingSound": true,
     "streamingQuality": "high",
     "volumeStreamingSound": 100,
