--- a/src/api/server/response/player/settings.json
+++ b/src/api/server/response/player/settings.json
@@ -1,9 +1,9 @@
 {
     "language": "en",
     "autoRebet": true,
-    "enableGameSound": true,
+    "enableGameSound": false,
     "enableStreamingVideo": true,
-    "enableStreamingSound": true,
+    "enableStreamingSound": false,
     "streamingQuality": "high",
     "volumeStreamingSound": 100,
     "volumeGameSound": 100
