--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.6",
         "i18next": "^23.11.5",
+        "lottie-react": "^2.4.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^14.1.2",
