--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VITE_URL_SOCKET="https://socketdev.menangtoto.pw"
+VITE_URL_SOCKET="https://socket.menangtoto.pw"
 VITE_URL_API=""
 VITE_GAME_NAME="dragon tiger"
