--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@typescript-eslint/eslint-plugin": "^7.13.1",
         "@typescript-eslint/parser": "^7.13.1",
         "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react": "^7.34.3",
@@ -35,7 +36,7 @@
         "eslint-plugin-react-refresh": "^0.4.7",
         "miragejs": "0.2.0-alpha.3",
         "prettier": "3.3.2",
-        "sass": "^1.77.6",
+        "sass-embedded": "^1.79.4",
         "typescript": "^5.2.2",
         "vite": "^5.3.1"
     },
