--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "workbench.editor.customLabels.patterns": {
-        "**/src/**/index.tsx": "${dirname}/index.tsx"
+        "**/src/**/index.tsx": "${dirname}/index.tsx",
+        "**/src/**/styles.module.scss": "${dirname}/styles.module.scss"
     }
 }
