--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@lottielab/lottie-player": "^1.1.2",
         "@reduxjs/toolkit": "^2.2.6",
         "i18next": "^23.11.5",
-        "lottie-react": "^2.4.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-i18next": "^14.1.2",
