--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "eslint-plugin-react": "^7.34.3",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
-        "miragejs": "0.2.0-alpha.3",
+        "miragejs": "^0.1.48",
         "prettier": "3.3.2",
         "sass-embedded": "^1.79.4",
         "typescript": "^5.2.2",
