--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev-build": "tsc && NODE_ENV=development vite build --mode development",
         "build": "tsc -b && vite build",
         "build-dev": "tsc && vite build --mode development",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint .",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -22,23 +22,24 @@
         "socket.io-client": "2.3.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/socket.io-client": "1.4.36",
-        "@typescript-eslint/eslint-plugin": "^7.13.1",
-        "@typescript-eslint/parser": "^7.13.1",
         "@vitejs/plugin-react-swc": "^3.7.2",
         "autoprefixer": "^10.4.20",
-        "eslint": "^8.57.0",
+        "eslint": "^9.17.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-react": "^7.34.3",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.7",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
+        "globals": "^15.14.0",
         "miragejs": "^0.1.48",
-        "prettier": "3.3.2",
-        "sass-embedded": "^1.79.4",
-        "typescript": "^5.2.2",
-        "vite": "^6.0.11"
+        "prettier": "^3.4.2",
+        "sass-embedded": "^1.83.4",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.18.2",
+        "vite": "^6.0.5"
     },
     "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
