--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@types/socket.io-client": "1.4.36",
-        "@vitejs/plugin-react-swc": "^3.7.2",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
