--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+VITE_APP_VERSION=1.2.0
 VITE_URL_SOCKET="https://socketdev.menangtoto.pw"
 VITE_URL_API=""
 VITE_URL_LOBBY="https://testlobby.menangtoto.pw"
