--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
         "miragejs": "^0.1.48",
         "prettier": "^3.4.2",
         "sass-embedded": "^1.83.4",
-        "typescript": "~5.6.2",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.22.0",
-        "vite": "^6.0.5"
+        "vite": "^6.0.11"
     },
     "packageManager": "pnpm@10.2.0+sha512.0d27364e0139c6aadeed65ada153135e0ca96c8da42123bd50047f961339dc7a758fc2e944b428f52be570d1bd3372455c1c65fa2e7aa0bfbf931190f9552001"
 }
