update build and develop

--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "dev-build": "tsc && NODE_ENV=development vite build --mode development",
-        "build": "tsc -b && vite build",
-        "build-dev": "tsc && vite build --mode development",
+        "dev-build": "tsc && NODE_ENV=development vite build --mode development && npm run normalize-localize-dev",
+        "build": "tsc -b && vite build && npm run normalize-localize",
+        "build-dev": "tsc && vite build --mode development && npm run normalize-localize-dev",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "normalize-localize-dev": "node cli/normalize-localize.cjs development",
+        "normalize-localize": "node cli/normalize-localize.cjs production"
     },
     "dependencies": {
         "@lottielab/lottie-player": "^1.1.3",
         "@reduxjs/toolkit": "^2.6.0",
         "i18next": "^24.2.2",
+        "i18next-http-backend": "^3.0.2",
+        "i18next-resources-to-backend": "^1.2.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-i18next": "^15.4.1",
@@ -23,6 +27,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@types/node": "^22.13.9",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@types/socket.io-client": "1.4.36",
